typescript/checker/tests/conformance/decorators/invalid/decoratorOnEnum.ts.stderr
error: Unexpected token Some(At)
 --> $DIR/tests/conformance/decorators/invalid/decoratorOnEnum.ts:3:1
  |
3 | @dec
  | ^

